--- a/Words/Properties/Resources.resx
+++ b/Words/Properties/Resources.resx
@@ -235,4 +235,7 @@
   <data name="Ship" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\ship.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="button_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button_sound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
