--- a/Words/Properties/Resources.resx
+++ b/Words/Properties/Resources.resx
@@ -335,6 +335,6 @@
     <value>..\resources\flags\venezuela.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="applause" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\applause7.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\resources\applause.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
